# portfolio-optimization

./: .gitignore  README.md  profile.txt  pyproject.toml
config/: logging.yaml  settings.yaml
data/: daily_returns.pkl
docs/: Aula17.pdf.gpg  project_description.md
src/: main.py
src/impure/: config.py  data_loader.py  logging_config.py  simulate.py
src/pure/: data_loader.py  result.py  safe_shared_memory.py  simulate.py
